# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1116 2012/10/08 23:26:22 zmedico Exp $

*portage-2.2.0_alpha136 (08 Oct 2012)

  08 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha136.ebuild:
  2.2.0_alpha136 version bump. This includes all of the fixes in 2.1.11.25. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.25 (08 Oct 2012)

  08 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.25.ebuild:
  2.1.11.25 version bump. This fixes bug #437180 (intermittent test failure in
  test_ipc_daemon), bug #437546 (use same repoman commit message for regular and
  manifest commits), and bug #437588 (fix Unknown tag error building rpms with
  4.10.0). Bug #431026 tracks all bugs fixed since portage-2.1.11.9.

  06 Oct 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.23.ebuild,
  -portage-2.2.0_alpha134.ebuild:
  Remove old versions.

*portage-2.2.0_alpha135 (04 Oct 2012)

  04 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha135.ebuild:
  2.2.0_alpha135 version bump. This includes all of the fixes in 2.1.11.24. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.24 (04 Oct 2012)

  04 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.24.ebuild:
  2.1.11.24 version bump. This fixes bug #436918 (add egencache --update-
  manifests action) and bug #436974 (regression if fetching for RESTRICT=mirror
  ebuilds with python-2.6). Bug #431026 tracks all bugs fixed since
  portage-2.1.11.9.

  29 Sep 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.22.ebuild,
  -portage-2.2.0_alpha133.ebuild:
  Remove old versions.

*portage-2.2.0_alpha134 (27 Sep 2012)

  27 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha134.ebuild,
  -portage-2.2.0_alpha132.ebuild:
  2.2.0_alpha134 version bump. This includes all of the fixes in 2.1.11.23. Bug