@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1116 2012/10/08 23:26:22 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1117 2012/10/10 16:28:48 zmedico Exp $
+
+  10 Oct 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.24.ebuild,
+  -portage-2.2.0_alpha135.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha136 (08 Oct 2012)
 
